--- a/app.json
+++ b/app.json
@@ -59,6 +59,7 @@
     "i-cell-group": "/dist/cell-group/index",
     "i-cell": "/dist/cell/index",
     "i-checkbox-group": "/dist/checkbox-group/index",
-    "i-checkbox": "/dist/checkbox/index"
+    "i-checkbox": "/dist/checkbox/index",
+    "i-modal": "/dist/modal/index"
   }
 }
