--- a/project.config.json
+++ b/project.config.json
@@ -22,12 +22,12 @@
 			"outputPath": ""
 		},
 		"useIsolateContext": true,
-		"useCompilerModule": true,
+		"useCompilerModule": false,
 		"userConfirmedUseCompilerModuleSwitch": false
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.10.4",
-	"appid": "wx7758de782c51657c",
+	"appid": "wx5fc3a72f2a87b0f6",
 	"projectname": "baomingba",
 	"debugOptions": {
 		"hidedInDevtools": []
